--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/nesko_logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Nesko Media">
+    <meta property="og:description" content="Fueling Your Business Growth in the Digital Age.">
+    <meta property="og:image" content="https://i.ibb.co/2vSGjTH/nesko-logo.jpg">
+    <meta property="og:url" content="https://neskomedia.onrender.com/">
     <meta
       name="description"
       content="Web site created using create-react-app"
